# cookiecutter-pypackage

./: cookiecutter.json
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: Makefile  setup.cfg  setup.py  tox.ini
